# ai-data-pipeline-rag

./: .gitignore  README.md  pyproject.toml
.astro/: config.yaml
docs/: CLAUDE.md  architecture.md  changes.md  roadmap.md
docs/integration/: README.md
src/chunking/: markdown_chunker.py
src/ingestion/: dbt_docs_ingestion.py
tests/chunking/: test_markdown_chunker.py
tests/ingestion/: test_dbt_docs_ingestion.py
