[project]
name = "ai-data-pipeline-rag"
version = "0.1.0"
description = "RAG pipeline for dbt documentation with data quality checks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
